force-app/main/default/objects/SPEN_MaterialDetails__c/SPEN_MaterialDetails__c.object-meta.xml
<CustomObject>
    <label>Material Details</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>Material Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>