force-app/main/default/objects/SPEN_MaterialDetails__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <description>CRMD-7831</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Material Details</relationshipLabel>
    <relationshipName>SPEN_MaterialDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>