force-app/main/default/objects/SPEN_MaterialDetails__c/fields/SPEN_JobCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobCategory__c</fullName>
    <description>CRMD-7831</description>
    <label>Job Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>