force-app/main/default/objects/SPEN_MaterialDetails__c/fields/SPEN_Material__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Material__c</fullName>
    <description>CRMD-7831</description>
    <label>Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>