force-app/main/default/objects/SPEN_MaterialDetails__c/fields/SPEN_MaterialCategory__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MaterialCategory__c</fullName>
    <description>CRMD-7831</description>
    <label>Material Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Joints</fullName>
            </value>
            <value>
                <fullName>Ducting</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Conductor</fullName>
            </value>
            <value>
                <fullName>Poles</fullName>
            </value>
            <value>
                <fullName>Staywire</fullName>
            </value>
            <value>
                <fullName>Insulators</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>