force-app/main/default/objects/SPEN_MaterialDetails__c/fields/SPEN_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Quantity__c</fullName>
    <description>CRMD-7831</description>
    <label>Quantity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>