force-app/main/default/objects/SPEN_MaterialDetails__c/fields/SPEN_ScopeofWorkLOI__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ScopeofWorkLOI__c</fullName>
    <formula>TEXT(SPEN_Quantity__c) &amp; &apos; &apos; &amp; TEXT(SPEN_MaterialCategory__c) &amp; &apos; &apos; &amp; SPEN_Material__c</formula>
    <label>Scope of Work - LOI</label>
    <type>Text</type>
</CustomField>